--- a/Settings.config
+++ b/Settings.config
@@ -37,7 +37,7 @@
       with the same Id and Version is already present. Valid settings are
       Allow and Deny.
   -->
-  <add key="packageOverwriteMode" value="Allow" />
+  <add key="packageOverwriteMode" value="Deny" />
   <!--
       When true, Access-Control-Allow-Origin and related headers will be added to
       requests handled by Web Api allowing web applications to invoke Api methods
@@ -48,7 +48,7 @@
       Change the path to the packages folder. Default is ~/App_Data/Packages.
       This can be a virtual or physical path.
     -->
-  <add key="packagesPath" value="" />
+  <add key="packagesPath" value="/app/klondike/data/packages" />
   <!--
       Change the path to where the lucene index is stored. Default is ~/App_Data/Lucene.
 
@@ -58,7 +58,7 @@
 
       This can be a virtual or physical path.
     -->
-  <add key="lucenePath" value="" />
+  <add key="lucenePath" value="/app/klondike/data/lucene" />
   <!--
       Change the path where contents of symbol packages are stored. Default is ~/App_Data/Symbols.
 
@@ -68,7 +68,7 @@
 
       This can be a virtual or physical path.
     -->
-  <add key="symbolsPath" value="" />
+  <add key="symbolsPath" value="/app/klondike/data/symbols" />
   <!--
       Specifies the path to Debugging Tools for Windows utilities used
       to process symbol packages.
