Remove unnecessary nesting of directories

--- a/Settings.config
+++ b/Settings.config
@@ -48,7 +48,7 @@
       Change the path to the packages folder. Default is ~/App_Data/Packages.
       This can be a virtual or physical path.
     -->
-  <add key="packagesPath" value="/app/klondike/data/packages" />
+  <add key="packagesPath" value="/app/data/packages" />
   <!--
       Change the path to where the lucene index is stored. Default is ~/App_Data/Lucene.
 
@@ -58,7 +58,7 @@
 
       This can be a virtual or physical path.
     -->
-  <add key="lucenePath" value="/app/klondike/data/lucene" />
+  <add key="lucenePath" value="/app/data/lucene" />
   <!--
       Change the path where contents of symbol packages are stored. Default is ~/App_Data/Symbols.
 
@@ -68,7 +68,7 @@
 
       This can be a virtual or physical path.
     -->
-  <add key="symbolsPath" value="/app/klondike/data/symbols" />
+  <add key="symbolsPath" value="/app/data/symbols" />
   <!--
       Specifies the path to Debugging Tools for Windows utilities used
       to process symbol packages.
